# VisionDrone

./: .gitignore  BUILDING.md  LICENSE  README.md
data/: analyte_multi.m  analyze.asv  analyze.m  analyze_height.m  analyze_impl.m  analyze_multi.asv  analyze_multi.m  analyze_variance.m  costf.m  costf2.m  localization_color.m  localization_type.m  rotate_t.m  shade.m
non_ros/calib_rs/: calib.py  calib.txt  convert_bag_to_imgs.py
non_ros/calib_sj4000/: calib.py  calib_data.txt
non_ros/imuws_9dof/: dof9_imu_param.yaml  result.txt
non_ros/kalibr_9dof/: camchain-imucam-homepyloDesktopkalibr3.yaml  camera.yaml  commands.txt  imu.yaml  results-imucam-homepyloDesktopkalibr3.txt  target.yaml
non_ros/kalibr_pi/: camera.yaml
non_ros/kalibr_rs/: camera.yaml  camimu.yaml  commands.txt  imu.yaml  imucam.yaml  imunoise.txt  results-imucam-homepyloDesktopkalibr_ir_1.txt  target.yaml
non_ros/librealsense/: README-custom-cmake.txt
non_ros/librealsense/unit-tests/: run-unit-tests.py
non_ros/orb_slam3/: CMakeLists.txt  build.sh
non_ros/orb_slam3/include/: System.h  Tracking.h
non_ros/orb_slam3/src/: Frame.cc  Optimizer.cc
non_ros/ortophoto_tests/: featuresfind.py  ransactest.py  testphotos.py
non_ros/python_tools/: export_bag_images.py
src/gps_data_fusion/: CMakeLists.txt  package.xml
src/gps_data_fusion/launch/: gps_to_local.launch
src/gps_injection/: CMakeLists.txt  gps_config.yaml  package.xml
src/gps_injection/config/: gps_config.yaml
src/gps_injection/include/: GPSData.h  UBXSender.h  ubx.h
src/gps_injection/launch/: apm_config.yaml  apm_pluginlists.yaml  gps_injection.xml  mavros.launch  test_gps_injection.launch  test_ublox_gps.launch
src/gps_injection/src/: GPSData.cc  UBXSender.cc  gps_generator.cc  gps_injection_node.cc  ubx_format.h
src/height_estimation/: CMakeLists.txt  package.xml
src/height_estimation/include/: algebra.h  altitude.h  filters.h
src/height_estimation/src/: algebra.cc  altitude.cc  filters.cc  height_estimation_node.cc
src/localizers/dead_reckoning/: CMakeLists.txt  package.xml
src/localizers/dead_reckoning/src/: dead_reckoning.cc
src/localizers/motion_simulation/: CMakeLists.txt  package.xml
src/localizers/motion_simulation/script/: motion_simulation.py  quadcopter.py
src/localizers/mrs_optic_flow/: CMakeLists.txt  package.xml
src/localizers/orb_slam3/: CMakeLists.txt  orb_slam3.yaml  package.xml
src/localizers/orb_slam3/include/: Fusion.h
src/localizers/orb_slam3/script/: slam_absolute.py
src/localizers/orb_slam3/src/: Fusion.cc  orb_slam3.cc  ros_mono_inertial.cc
src/localizers/px4_optical_flow/: CMakeLists.txt  package.xml
src/localizers/px4_optical_flow/include/: filter.hpp  flow_px4.hpp
src/localizers/px4_optical_flow/src/: flow_opencv.cpp  px4flow_node.cc
src/mag_driver/include/: i2c.h
src/mag_driver/src/: i2c.cc  (+1 more)
src/middleware/gps_injection/: CMakeLists.txt
src/middleware/gps_injection/include/: UBXSender.h
src/middleware/gps_injection/src/: gps_injection_node.cc
src/middleware/mag_driver/: CMakeLists.txt  package.xml
src/middleware/mag_driver/include/: i2c.h
src/middleware/mag_driver/src/: mag_driver_node.cc
src/misc/imu_drivers/: CMakeLists.txt  package.xml
src/misc/imu_drivers/include/: BMP280.h  MPU9250.h  QuaternionFilter.h  bmp280.h  bmp280_defs.h
src/misc/imu_drivers/launch/: calib_9dof.launch  test_9dof.launch  test_baro.launch
src/misc/imu_drivers/src/: BMP280.cc  baro_driver_node.cc  bmp280.cc  imu9dof_driver_node.cc
src/misc/max_sonar_driver/: CMakeLists.txt  package.xml
src/misc/max_sonar_driver/launch/: test_sonar.launch
src/misc/max_sonar_driver/src/: sonar_node.cc
src/misc/tf02_lidar_driver/: CMakeLists.txt  package.xml
src/misc/tf02_lidar_driver/launch/: test_tf02_lidar.launch
src/misc/tf02_lidar_driver/src/: tf02_node.cc
src/optical_flow/: CMakeLists.txt  package.xml
src/optical_flow/config/: default.yaml
src/optical_flow/launch/: flow_test.launch
src/optical_flow/src/: VelocityIntegrator.cc
src/orb_slam3/: CMakeLists.txt  orb_slam3.yaml  package.xml
src/orb_slam3/include/: Fusion.h  PoseManager.h
src/orb_slam3/launch/: orb_slam3.yaml  orb_slam3_video.launch
src/orb_slam3/src/: Fusion.cc  PoseManager.cc  ros_mono.cc  ros_mono_inertial.cc  ros_mono_inertial2.cc  ros_mono_inertial3.cc
src/runs/: CMakeLists.txt  package.xml
src/velocity_integrator/: CMakeLists.txt  package.xml
src/velocity_integrator/include/: PoseManager.h
src/velocity_integrator/script/: velocity_fusion.py
src/velocity_integrator/src/: PoseManager.cc  PoseManagerNode.cc  VelocityIntegrator.cc
src/visiondrone/: CMakeLists.txt  package.xml
src/visiondrone/launch/: apm_gps_passthrough.launch  bag_play_orb_slam3.launch  bag_record_ext_imu.launch  bag_record_picam.launch  bag_record_rs_ir_ext_imu.launch  bag_record_rs_iri.launch  bag_record_sensors.launch  rt_matching.launch  rt_slam.launch  rviz_orb_slam3.launch  rviz_showtf.launch
src/visiondrone/launch/live/: live_optical_flow_opencv.launch
src/visiondrone/launch/localizers/: 3d_slam.launch  dead_reckoning.launch  fusion.launch  motion_simulation.launch  optical_flow_1.launch  optical_flow_2.launch  optical_flow_opencv.launch  optical_flow_px4.launch
src/visiondrone/launch/processing/: gps_to_local.launch  orientation_estimation.launch  tf.launch
src/visiondrone/launch/rviz/: ls.sh  rviz_dead_reckoning.launch  rviz_fusion.launch  rviz_motion_simulation.launch  rviz_optical_flow_1.launch  rviz_optical_flow_2.launch  rviz_optical_flow_opencv.launch  rviz_optical_flow_px4.launch  rviz_orb_slam3.launch  rviz_showtf.launch
src/visiondrone/launch/subsystems/: apm_config.yaml  apm_pluginlists.yaml  mavros.launch  orientation_estimation.launch  pi_camera.launch  pi_camera.sh  rs_d435i_ir.launch  rs_d435i_iri.launch  rs_d435i_rgbdi.launch  rs_d435i_rgbi.launch  sensors.launch
src/visiondrone/rviz/: drone.stl  drone.urdf  orbslam.rviz  tfdisplay.rviz
src/visiondrone/script/: imubias.py  odom2path.py  pfchecklists.py  pose2matlab.py  pose2path.py
src/visualization/: CMakeLists.txt  package.xml
(+63 files in other folders)
