<?xml version="1.0"?>
<package format="2">
    <name>velocity_integrator</name>
    <version>0.0.0</version>
    <description>The visiondrone package</description>

    <maintainer email="pylo@todo.todo">pylo</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>

    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <depend>geographic_msgs</depend>

    <export>
        <cpp cflags="-I${prefix}/srv/cpp"/>
    </export>
</package>
