<?xml version="1.0"?>
<package format="2">
    <name>visiondrone</name>
    <version>0.0.0</version>
    <description>The visiondrone package</description>

    <maintainer email="pylo@todo.todo">pylo</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>

    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>std_msgs</depend>
    <depend>image_transport</depend>

    <depend>geometry_msgs</depend>
    <depend>geonav_transform</depend>

    <depend>velocity_integrator</depend>

    <export>
    </export>
</package>
