cmake_minimum_required(VERSION 3.0.2)
project(motion_simulation)

find_package(catkin REQUIRED COMPONENTS
        roscpp
        rospy
        std_msgs
        sensor_msgs
        )

catkin_package()

include_directories(${catkin_INCLUDE_DIRS})

catkin_install_python(PROGRAMS script/motion_simulation.py DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})