<?xml version="1.0"?>
<package format="2">
    <name>px4_optical_flow</name>
    <version>0.0.0</version>
    <description>Optical flow package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="christoph@px4.io">christoph</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>libopencv-dev</depend>
    <depend>klt_feature_tracker</depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
