<?xml version="1.0"?>
<package format="2">
  <name>mag_driver</name>
  <version>0.0.0</version>
  <description>The mag_driver package</description>

  <maintainer email="pylo@todo.todo">pylo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>ublox_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>

  <export>
  </export>
</package>
